--- a/Client/public/index.html
+++ b/Client/public/index.html
@@ -34,7 +34,7 @@
       href="https://fonts.googleapis.com/css2?family=Varela+Round&display=swap"
       rel="stylesheet"
     />
-    <script src="https://maps.googleapis.com/maps/api/js?key=YOUR_API_KEY&libraries=places"></script>
+    <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyBow_jbXzXMc3sZwhitjXc_PjonPlZo5FU=places"></script>
   </head>
   <body class="hide-scrollbar">
     <noscript>You need to enable JavaScript to run this app.</noscript>
